[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/itens-coletaveis-moedas.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Tileset/Templo/Itens/gold-coin.png" type="Texture" id=2]
[ext_resource path="res://probs/moedas_som.tscn" type="PackedScene" id=3]
[ext_resource path="res://Particles/portal_yellowParticle.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 21.0596

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 0.1
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.18
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="itens-coletaveis-moedas" type="Area2D"]
position = Vector2( 520.707, 238.038 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="moedas_som" parent="." instance=ExtResource( 3 )]

[node name="particles" type="Particles2D" parent="."]
emitting = false
amount = 25
one_shot = true
explosiveness = 1.0
process_material = SubResource( 2 )
texture = ExtResource( 4 )

[node name="queue_timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_itenscoletaveismoedas_body_entered"]
[connection signal="timeout" from="queue_timer" to="." method="_on_queue_timer_timeout"]
